<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.frxs.promotion</groupId>
  <artifactId>promotion</artifactId>
  <version>1.0.0</version>
  <name>promotion</name>
  <packaging>pom</packaging>
  <url>http://maven.apache.org</url>

  <modules>
    <module>promotion-common-dal</module>
    <module>promotion-common-integration</module>
    <module>promotion-common-util</module>
    <module>promotion-biz-event</module>
    <module>promotion-core-service</module>
    <module>promotion-service-api</module>
    <module>promotion-service-impl</module>
  </modules>

  <properties>
    <!-- 编码 -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <module.version>1.0.0</module.version>
    <ehcache.version>2.10.4</ehcache.version>
    <frxsframework.version>1.0.0</frxsframework.version>
    <log4j2.version>2.10.0</log4j2.version>
    <lombok.version>1.16.18</lombok.version>
    <mapstruct.version>1.2.0.Final</mapstruct.version>
    <frxs.merchant.version>1.0.0</frxs.merchant.version>
    <frxs.trade.version>1.0.0</frxs.trade.version>
    <spring.version>5.0.4.RELEASE</spring.version>
    <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
    <mybatis-plus.version>2.1.8</mybatis-plus.version>
    <httpclient.version>4.5.5</httpclient.version>
    <httpcomponents.version>4.5.5</httpcomponents.version>
    <httpcore.version>4.4.9</httpcore.version>
    <elastic-job-lite.version>2.1.5</elastic-job-lite.version>
    <druid.version>1.1.9</druid.version>
    <druid.springboot.version>1.1.9</druid.springboot.version>
    <!--<apollo.version>0.9.1</apollo.version>-->
    <frxs.user.version>1.0.0</frxs.user.version>
    <zookeeper.version>3.4.11</zookeeper.version>
    <guava.version>20.0</guava.version>
    <smsmontnets.version>1.1</smsmontnets.version>
  </properties>

  <!-- repository -->
  <repositories>
    <repository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/libs-milestone</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>nexus</id>
      <name>Nexus Local Repository</name>
      <url>http://192.168.6.224:8081/repository/maven-public/</url>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
  </repositories>

  <!-- pluginRepository -->
  <pluginRepositories>
    <pluginRepository>
      <id>nexus-plugin</id>
      <name>Nexus Plugin Repository</name>
      <url>http://192.168.6.224:8081/repository/maven-public/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>

  <!-- dependencyManagement -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.frxs.framework</groupId>
        <artifactId>frxsframework-service-bom</artifactId>
        <version>${frxsframework.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <!-- spring-boot -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- 日志文件管理包 -->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-bom</artifactId>
        <version>${log4j2.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.apache.zookeeper</groupId>
        <artifactId>zookeeper</artifactId>
        <version>${zookeeper.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- 梦网短信SDK -->
      <dependency>
        <groupId>com.montnets.mwgate</groupId>
        <artifactId>JavaSmsSdk</artifactId>
        <version>${smsmontnets.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <!-- dependency -->
  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <version>${mapstruct.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct-jdk8</artifactId>
      <version>${mapstruct.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct-processor</artifactId>
      <scope>provided</scope>
      <version>${mapstruct.version}</version>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>product</id>
      <build>
        <resources>
          <resource>
            <directory>src/main/java</directory>
            <includes>
              <include>**/*.properties</include>
              <include>**/*.xml</include>
            </includes>
            <filtering>true</filtering>
          </resource>
          <resource>
            <directory>src/main/resources</directory>
          </resource>
        </resources>
      </build>
    </profile>
  </profiles>

  <build>
    <finalName>${project.name}</finalName>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <includes>
          <include>**/*.properties</include>
          <include>**/*.xml</include>
        </includes>
        <filtering>true</filtering>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**</include>
        </includes>
        <filtering>true</filtering>
      </resource>
    </resources>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
            <encoding>UTF-8</encoding>
            <testIncludes>
              <testInclude>none</testInclude>
            </testIncludes>
            <annotationProcessorPaths>
              <path>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
              </path>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.16.18</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
          <configuration>
            <archive>
              <manifest>
                <addDefaultImplementationEntries>true
                </addDefaultImplementationEntries>
                <addDefaultSpecificationEntries>true
                </addDefaultSpecificationEntries>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jdeps-plugin</artifactId>
          <version>3.0.0</version>
          <executions>
            <execution>
              <goals>
                <goal>jdkinternals</goal>
                <goal>test-jdkinternals</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.0.1</version>
          <configuration>
            <attach>true</attach>
          </configuration>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.20.1</version>
          <configuration>
            <argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
            <testFailureIgnore>true</testFailureIgnore>
            <includes>
              <include>**/*Test*.java</include>
            </includes>
            <excludes/>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <developers>
    <developer>
      <name>TangMingBo</name>
      <id>MingBo.Tang</id>
      <email>tangmb@frxs.com</email>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>+8</timezone>
    </developer>
  </developers>

  <distributionManagement>
    <repository>
      <id>maven-releases</id>
      <name>Frxs Nexus Release Repository</name>
      <url>http://192.168.6.224:8081/repository/maven-releases</url>
    </repository>
    <snapshotRepository>
      <id>maven-snapshots</id>
      <name>Frxs Nexus Snapshot Repository</name>
      <url>http://192.168.6.224:8081/repository/maven-snapshots</url>
    </snapshotRepository>
  </distributionManagement>
</project>